--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -23,4 +23,6 @@ jobs:
             cd /projects/bigtrail-backend
             sudo /home/github/scripts/dev_grant_github.sh
             git pull
+            npm ci
+            pm2 restart backend
             sudo /home/github/scripts/dev_grant_root.sh
