--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "graphql": "^16.8.1",
+    "minio": "^7.1.3",
     "mongoose": "^8.0.2",
+    "nestjs-minio-client": "^2.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
