--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "graphql": "^16.8.1",
     "minio": "^7.1.3",
     "mongoose": "^8.0.2",
