--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "graphql": "^16.8.1",
+    "graphql-upload": "^13.0.0",
     "minio": "^7.1.3",
     "mongoose": "^8.0.2",
     "nestjs-minio-client": "^2.2.0",
@@ -50,6 +51,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
+    "@types/graphql-upload": "^16.0.7",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.3.1",
