--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "nodenext",
+    "allowJs": true,
+    "maxNodeModuleJsDepth": 10,
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
