--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^13.0.0",
+    "graphql-ws": "^5.14.3",
     "minio": "^7.1.3",
     "mongoose": "^8.0.2",
     "nestjs-minio-client": "^2.2.0",
@@ -43,7 +45,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
