--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "geotiff": "^2.1.3",
     "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^16.0.2",
