bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,7 +5,7 @@ pipelines:
       master:
        - step:
           deployment: production
-          name: 'Deployment to figtrail-dev'
+          name: 'Deployment to bigtrail-dev'
           script:
            - pipe: atlassian/ssh-run:0.8.0
              variables:
