--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -22,6 +22,6 @@ jobs:
           script: |
             cd /projects/bigtrail-backend-dev
             sudo /home/github/scripts/dev_grant_github.sh
-            git pull
+            git pull origin master
             sudo /home/github/scripts/dev_grant_root.sh
             sudo /home/github/scripts/backend_restart.sh
