--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bigtrail-backend",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "Backend for BigTrail project",
   "author": "Maxim Piskunov (qualaddar@gmail.com)",
   "private": true,
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "geotiff": "^2.1.3",
     "graphql": "^16.8.1",
