--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cors": "^2.8.5",
     "geotiff": "^2.1.3",
     "graphql": "^16.8.1",
+    "graphql-geojson-scalar-types": "^0.1.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^16.0.2",
     "graphql-ws": "^5.14.3",
