--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bigtrail-backend",
-  "version": "1.5.8-weln",
+  "version": "1.5.9",
   "description": "Backend for BigTrail project",
   "author": "Maxim Piskunov (qualaddar@gmail.com)",
   "private": true,
