--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bigtrail-backend",
-  "version": "1.6.17",
+  "version": "1.7.0",
   "description": "Backend for BigTrail project",
   "author": "Maxim Piskunov (qualaddar@gmail.com)",
   "private": true,
@@ -41,9 +41,11 @@
     "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^16.0.2",
     "graphql-ws": "^5.14.3",
+    "lodash": "^4.17.21",
     "minio": "^7.1.3",
     "mongoose": "^8.0.2",
     "nestjs-minio-client": "^2.2.0",
+    "ol": "^9.2.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -60,6 +62,7 @@
     "@types/graphql-upload": "^16.0.7",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.17.4",
     "@types/node": "^20.3.1",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^3.0.13",
